# miru

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  Grimoire.toml  README.md  _typos.toml  cliff.toml  flake.nix  miru.ans  references.md
.ccls-cache/@@home@vaishnav@Desktop@My_Projects@miru/: @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@stdio_lim.h.blob  @usr@include@bits@time64.h.blob  @usr@include@bits@timesize.h.blob  @usr@include@bits@types.h.blob  @usr@include@bits@types@FILE.h.blob  @usr@include@bits@types@__FILE.h.blob  @usr@include@bits@types@__fpos64_t.h.blob  @usr@include@bits@types@__fpos_t.h.blob  @usr@include@bits@types@__mbstate_t.h.blob  @usr@include@bits@types@cookie_io_functions_t.h.blob  @usr@include@bits@types@struct_FILE.h.blob  @usr@include@bits@typesizes.h.blob  @usr@include@bits@wordsize.h.blob  @usr@include@features-time64.h.blob  @usr@include@features.h.blob  @usr@include@gnu@stubs-64.h.blob  @usr@include@gnu@stubs.h.blob  @usr@include@stdc-predef.h.blob  @usr@include@stdio.h.blob  @usr@include@sys@cdefs.h.blob  @usr@lib@clang@22@include@__stdarg___gnuc_va_list.h.blob  @usr@lib@clang@22@include@__stddef_null.h.blob  @usr@lib@clang@22@include@__stddef_size_t.h.blob  @usr@lib@clang@22@include@stdarg.h.blob  @usr@lib@clang@22@include@stddef.h.blob
.ccls-cache/@home@vaishnav@Desktop@My_Projects@miru/: src@main.c.blob
.githooks/: pre-commit
.github/workflows/: c_format.yml  release.yml
cmake/: WaylandScanner.cmake
ctl/: miructl.c
src/: capture.c  capture.h  input.c  input.h  ipc_server.c  ipc_server.h  layer_surface.c  layer_surface.h  logo.c  logo.h  main.c  shm_buffer.c  shm_buffer.h  version.h.in  wayland_state.c  wayland_state.h
